src/index.css
/* Colours + Fonts */
:root {
  --brown: #2f2f2f;
  --purple: #956aec;
  --dark-purple: #7b4de8;
  --black: #000000;
  --white: #ffffff;
  --navy: #1d64a2;
  --footer-background: #76e6ff;
  --font-display: 'BM Jua', sans-serif;
}

